objects/Next_Step__c/Next_Step__c.object-meta.xml
<CustomObject>
    <label>Next Step</label>
    <nameField>
        <displayFormat>Next Step - {0000}</displayFormat>
        <label>Next Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Next Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>