objects/Next_Step__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Next Steps</relationshipLabel>
    <relationshipName>Next_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>